--- a/.github/actions/run-ts-sdk-e2e-tests/action.yaml
+++ b/.github/actions/run-ts-sdk-e2e-tests/action.yaml
@@ -17,7 +17,7 @@ runs:
       with:
         node-version-file: .node-version
         registry-url: "https://registry.npmjs.org"
-    - uses: pnpm/action-setup@537643d491d20c2712d11533497cb47b2d0eb9d5 # pin https://github.com/pnpm/action-setup/releases/tag/v2.2.3
+    - uses: pnpm/action-setup@v2
 
     # Find a docker image to use for the testnet.
     - uses: ./.github/actions/get-latest-docker-image-tag
